# pydaikin

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  MANIFEST  Makefile  README.md  bitbucket-pipelines.yml  daikin  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: check-quotes.yml  pylint.yml  pytest.yml  release.yml
docs/sample_requests/airbase_alira_x/: README.md  basic_info.txt  get_model_info.txt
docs/sample_requests/alira_x/: get_control_info.txt  get_sensor_info.txt
docs/sample_requests/brp069/: basic_info.txt  get_control_info.txt  get_datetime.txt  get_day_power_ex.txt  get_holiday.txt  get_model_info.txt  get_notify.txt  get_price.txt  get_remote_method.txt  get_sensor_info.txt  get_target.txt  get_week_power.txt  get_year_power.txt
docs/sample_requests/skyfi/: README.md  ac.cgi.txt  zones.cgi.txt
pydaikin/: __init__.py  appliance-skyfi.py  appliance.py  daikin_airbase.py  daikin_airbase_hotwater.py  daikin_base.py  daikin_brp069.py  daikin_brp072c.py  daikin_brp084.py  daikin_brp_280.py  daikin_skyfi.py  discovery.py  entity.py  enums.py  exceptions.py  factory.py  httpentity.py  power.py  pydaikin.py  response.py  udpentity.py  values.py
pydaikin/models/: base.py  brp069.py  types.py
pydaikin/models/BRP084Cxx_v2_8/: model.py
pydaikin/models/v2/brp084cxx/: __init__.py
tests/: comprehensive_test.py  integrated_network_test.py  test_airbase_hotwater.py  test_brp069_setters.py  test_daikin.py  test_daikin_airbase.py  test_daikin_airbase_alira_x.py  test_daikin_alira_x.py  test_daikin_base.py  test_daikin_brp072c.py  test_daikin_brp084.py  test_daikin_brp_280.py  test_discovery.py  test_energy_consumption.py  test_factory.py  test_init.py  test_multiple_devices.py  test_network_devices.py  test_power_sensor.py  test_skyfi.py  test_values.py
tests/daikin/: mock.py  test_base.py  test_brp069.py
tests/models/: test_base_model.py
tests/models/BRP084Cxx_v2_8/: test_parse_response.py
tests/models/BRP084Cxx_v2_8/fixtures/: first_discovery.json
tests/models/base/: test_common_basic_info.py  test_daikin_response.py
