[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
authors = [
  { name = "Fredrik Erlandsson", email = "fredrik.e@gmail.com" },
  { name = "Yari Adan", email = "mustang@yadan.org" },
]
name = "pydaikin"
version = "2.16.0"
license = "GPL-3.0-or-later"
description = "Python Daikin HVAC appliances interface"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Home Automation",
]
dependencies = ['netifaces', 'aiohttp', 'urllib3', 'tenacity']
requires-python = ">= 3.12"
readme = "README.md"
maintainers = [
  { name = "Fredrik Erlandsson", email = "fredrik.e@gmail.com" },
  { name = "Matthias Lemainque", email = "matthias.lemainque+pydaikin@gmail.com" },
]

[project.urls]
Homepage = "https://github.com/fredrike/pydaikin"
Repository = "https://github.com/fredrike/pydaikin.git"
Issues = "https://github.com/fredrike/pydaikin/issues"

[tool.setuptools]
script-files = ['bin/pydaikin']

[tool.black]
skip-string-normalization = true
target-version = ["py312", "py313"]
include = '\.pyi?$|pydaikin$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytype]
python_version = 3.12

[tool.isort]
include_trailing_comma=true
use_parentheses=true
sections = ["FUTURE","STDLIB","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]
default_section = "THIRDPARTY"
known_first_party = "pydaikin"
# https://github.com/timothycrosley/isort
# https://github.com/timothycrosley/isort/wiki/isort-Settings
# splits long import on multiple lines indented by 4 spaces
multi_line_output = 3
force_grid_wrap = 0
line_length = 88
indent = "    "
# will group `import x` and `from x import` of the same module.
force_sort_within_sections = true
